🎨 Rearrange project files

--- a/notebooks/flight_software_simulators_report.ipynb
+++ b/notebooks/flight_software_simulators_report.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
     "import re\n",
     "import time\n",
     "import json\n",
-    "from utils import add_key_to_dict"
+    "from src.utils import add_key_to_dict"
    ]
   },
   {
@@ -610,12 +610,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import enum\n",
-    "from utils import sorted_tuples_list"
+    "from src.utils import sorted_tuples_list"
    ]
   },
   {
@@ -1090,11 +1090,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import sorted_tuples_list\n",
+    "from src.utils import sorted_tuples_list\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
