✨ Add search by years, change google scholar retrieval function

--- a/scripts/01_data_retrieval.ipynb
+++ b/scripts/01_data_retrieval.ipynb
@@ -32,27 +32,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "id": "f7a10201",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# https://scholar.google.com/scholar?q=PX4&hl=en&as_sdt=0%2C5&as_ylo=2020&as_yhi=2021\n",
+    "from bs4 import BeautifulSoup\n",
+    "import requests\n",
+    "import re\n",
+    "import time\n",
+    "import json\n",
     "import sys, os\n",
-    "\n",
-    "module_path = os.path.abspath(os.path.join('..', 'src'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n",
-    "\n",
-    "from utils import now_timestamp\n",
-    "\n",
-    "# sys.path.append(os.path.abspath(os.path.join('..')))\n",
-    "# from src.data_serializer import Data\n",
-    "# from src.utils import now_timestamp, sorted_tuples_list"
+    "sys.path.append(os.path.abspath(os.path.join('..')))\n",
+    "from src.utils import valid_years_range, valid_year\n",
+    "from dotenv import load_dotenv\n",
+    "from datetime import datetime\n",
+    "import serpapi\n",
+    "load_dotenv(override=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "65060586",
    "metadata": {},
    "outputs": [],
@@ -71,13 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 3,
    "id": "4ba0627f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load required variables from .env\n",
-    "load_dotenv()\n",
+    "load_dotenv(override=True)\n",
     "software_names_filepath = os.getenv(\"SOFT_LIST_PATH\")\n",
     "sim_names_filepath = os.getenv(\"SIM_LIST_PATH\")\n",
     "output_folderpath = os.getenv(\"OUTPUT_JSON_PATH\")\n",
@@ -86,50 +99,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 11,
    "id": "35ef4041",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_results_amount_from_google_scholar(request: str) -> int:\n",
-    "    time.sleep(5)\n",
-    "    \n",
-    "    url = f\"https://scholar.google.com/scholar?hl=en&as_sdt=0%2C5&q={\"+\".join(request.split(\" \"))}&btnG=\"\n",
-    "    response = requests.get(url)\n",
+    "def get_results_amount_from_google_scholar(query: str, year: int = None) -> int:\n",
+    "  if year and not valid_year(year):\n",
+    "        return\n",
+    "  \n",
+    "  url = f\"https://serpapi.com/search.json?q={\"+\".join(query.split(\" \"))}&engine=google_scholar&as_vis=1&num=1&api_key={os.getenv(\"SERPAPI_API_KEY\")}\"\n",
+    "  url = url + f\"&as_ylo={year}&as_yhi={year}\" if year else url\n",
     "\n",
-    "    if response.status_code == 200:\n",
-    "        soup = BeautifulSoup(response.text)\n",
-    "        res = re.search(r\"About (\\d*)[.](\\d*) result[s] \\(\\d*[,]\\d* sec\\)\", soup.text)\n",
-    "\n",
-    "        if res:\n",
-    "            about_results_string = soup.text[res.start():res.end()] # About 3.550 results (0,09 sec)\n",
-    "            res =  int(about_results_string.split(\" \")[1].replace(\".\", \"\")) # 3550\n",
-    "            print(f\"Got result for request '{request}'\")\n",
-    "            return res\n",
-    "        else:\n",
-    "            no_results_found_match = re.search(r\"Your search - \\S+ - did not match any articles.\", soup.text)\n",
-    "            if no_results_found_match:\n",
-    "                print(f\"Got result (0) for request '{request}'\")\n",
-    "                return 0\n",
-    "            else:\n",
-    "                print(f\"Unknown error occured, could not parse the result (request '{request}'), response: {response}\")\n",
-    "                return None\n",
-    "    else:\n",
-    "        print(f\"Could not find url: {url}, response: {response}\")\n",
-    "        print(f\"Given request: '{request}'\")\n",
-    "        return None"
+    "  response = requests.get(url)\n",
+    "  if response.status_code == 200:\n",
+    "      data = response.json()\n",
+    "      return data[\"search_information\"][\"total_results\"]\n",
+    "  else: \n",
+    "      print(f\"Could not find url: {url}, response: {response}, {response.text}\")\n",
+    "      print(f\"Given request: '{query}'\")\n",
+    "      return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 12,
    "id": "c1954aec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_results_amount_from_semantic_scholar(query: str) -> int:\n",
+    "def get_results_amount_from_semantic_scholar(query: str, year: int = None) -> int:\n",
+    "    if year and not valid_year(year):\n",
+    "        return\n",
+    "    \n",
     "    time.sleep(2)\n",
     "    url = f\"https://api.semanticscholar.org/graph/v1/paper/search?query={\"+\".join(query.split(\" \"))}&limit=1\"\n",
+    "    url = url + f\"&year={year}\" if year else url\n",
     "    response = requests.get(url)\n",
     "\n",
     "    if response.status_code == 200:\n",
@@ -144,21 +149,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 13,
    "id": "717924b3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_results_amount(query: str):\n",
+    "def get_results_amount(query: str, year: int = None):\n",
     "    if from_semantic_scholar:\n",
-    "        return get_results_amount_from_semantic_scholar(query)\n",
+    "        return get_results_amount_from_semantic_scholar(query, year)\n",
     "    else:\n",
-    "        return get_results_amount_from_google_scholar(query)"
+    "        return get_results_amount_from_google_scholar(query, (year, year))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3b93c048",
    "metadata": {},
    "outputs": [],
@@ -184,20 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5541b3d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_popularity(name: str, is_software: bool, data: dict):\n",
+    "def add_popularity(name: str, is_software: bool, data: dict, year: int = None):\n",
     "    entity = \"software\" if is_software else \"sim\"\n",
     "\n",
-    "    overall_result = get_results_amount(name)\n",
+    "    overall_result = get_results_amount(name, year)\n",
     "    if overall_result:\n",
     "        data[f\"{entity}_popularities\"][name] = overall_result\n",
     "        print(\"Added overall popularity of \" + name)\n",
     "\n",
-    "    uav_result = get_results_amount(name + \" uav\")\n",
+    "    uav_result = get_results_amount(name + \" uav\", year)\n",
     "    if uav_result:\n",
     "        data[f\"uav_{entity}_popularities\"][name] = uav_result\n",
     "        print(\"Added UAV popularity of \" + name)\n",
@@ -212,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "412fccba",
    "metadata": {},
    "outputs": [],
@@ -228,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f6956460",
    "metadata": {},
    "outputs": [],
@@ -257,6 +262,51 @@
     "        total = {\n",
     "                \"from\": \"Semantic Scholar\" if from_semantic_scholar else \"Google Scholar\",\n",
     "                \"data\": data\n",
+    "                }\n",
+    "        json.dump(total, f, indent=2)\n",
+    "\n",
+    "    print(f\"Saved received data to '{output_folderpath}'\")\n",
+    "    print(\"End\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "34f9bf09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retrieve_years_data(years_range: tuple[int, int] = None):\n",
+    "    software = get_flight_software_names()\n",
+    "    sims = get_simulators_names()\n",
+    "    output_filepath = generate_output_file()\n",
+    "\n",
+    "    if years_range and not valid_years_range(years_range):\n",
+    "        return\n",
+    "    \n",
+    "    result_data = {}\n",
+    "    \n",
+    "    for year in range(years_range[0], years_range[1]):\n",
+    "        data = {\n",
+    "                    \"software_popularities\": {},\n",
+    "                    \"sim_popularities\": {},\n",
+    "                    \"uav_software_popularities\": {},\n",
+    "                    \"uav_sim_popularities\": {},\n",
+    "                    \"soft_sim_distributions\": {}\n",
+    "                }\n",
+    "        \n",
+    "        for soft in software:\n",
+    "            add_popularity(soft, is_software=True, data=data, year=year)\n",
+    "\n",
+    "        for sim in sims:\n",
+    "            add_popularity(sim, is_software=False, data=data, year=year)\n",
+    "\n",
+    "        result_data[f\"{year}\"] = data\n",
+    "\n",
+    "    with open(output_filepath, \"w\") as f:\n",
+    "        total = {\n",
+    "                \"from\": \"Semantic Scholar\" if from_semantic_scholar else \"Google Scholar\",\n",
+    "                \"data\": result_data\n",
     "                }\n",
     "        json.dump(total, f, indent=2)\n",
     "\n",
